--- a/styles.css
+++ b/styles.css
@@ -12,3 +12,27 @@
   --fw-400: 400;
   --fw-700: 700;
 }
+
+/* ### CSS RESET ### */
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+}
+
+* {
+  margin: 0;
+  padding: 0;
+}
+
+img {
+  display: block;
+  max-width: 100%;
+}
+
+input,
+button,
+textarea,
+select {
+  font: inherit;
+}
