--- a/styles.css
+++ b/styles.css
@@ -205,8 +205,8 @@ input[type="email"].email-input-invalid {
 /* ### MOBILE SUCCESS MODAL ### */
 
 .success-message {
-  position: absolute;
-  z-index: 2;
+  position: fixed;
+  /* z-index: 2; */
   background-color: var(--neutral-white);
   max-width: 375px;
 }
@@ -235,4 +235,24 @@ input[type="email"].email-input-invalid {
 
 .success-message p {
   margin-bottom: auto;
+}
+
+/* ### MEDIA QUERIES ### */
+
+@media (min-width: 23.438em) {
+  main {
+    min-height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 1.5rem;
+  }
+
+  .newsletter-sign-up {
+    max-width: 500px;
+    overflow: hidden;
+    margin-inline: unset;
+    border-radius: 1.5rem;
+    padding: 1.5rem;
+  }
 }
