--- a/styles.css
+++ b/styles.css
@@ -327,6 +327,7 @@ input[type="email"].email-input-invalid {
 
   .newsletter__text-section ul {
     font-size: 0.9rem;
+    margin-top: 1.5rem;
   }
 
   ul li::before {
